# runtime

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  helloworld.wasm  wrapper.h
example/: echo.wasm  helloworld.wasm  helloworld.wast  zlib.wasm
examples/: main.rs  nrt-run-wasm.rs
src/: lib.rs  utils.rs
src/codegen/: _type.rs  builder.rs  call_conv.rs  common.rs  context.rs  control.rs  function.rs  inst.rs  macros.rs  memory.rs  mod.rs  module.rs  numeric.rs  value.rs  variable.rs
src/codegen/debuginfo/: mod.rs
src/ir/: types.rs
src/llvm/: PassWrapper.cpp  RustWrapper.cpp  call_conv.rs  ffi.rs  mod.rs  rustllvm.h  value.rs
src/llvm/wrapper/: PassWrapper.cpp  RustWrapper.cpp
src/llvm_wrapper/: core.rs  mod.rs
src/platform/: mod.rs
src/platform/posix/: mod.rs
src/runtime/: compartment.rs  context.rs  data.rs  link.rs  memory.rs  mod.rs
src/stdlib/: mod.rs
src/wasm/: call_conv.rs  defines.rs  mod.rs  types.rs
