[package]
name = "nrt"
version = "0.0.1"
authors = ["Pengfei Zhang <zpfalpc23@gmail.com>"]
build = "build.rs"

[[bin]]
name = "nrt-run-wasm"
path = "bin/nrt-run-wasm.rs"

# [[bin]]
# name = "nianjia-lld"
# path = "bin/nianjia-lld.rs"

[dependencies]
parity-wasm = "0.35.4"
bitflags = "1.0.4"
lazy_static = "1.2.0"
clap = "2.32.0"

[build-dependencies]
cc = "1.0.25"

